<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Surprise</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="finish">ProgressBar is finished.</string>
    
    <string name="str_voltage">电压(V)</string>
    <string name="str_current">电流(A)</string>
    <string name="str_activepower">有功功率(kW)</string>
    <string name="str_reactivepower">无功功率(kvar)</string>
    <string name="str_phaseangle">相角</string>
    <string name="str_powerfactor">功率因数</string>
    <string name="str_inspectingpower">视在功率(kVA)</string>
    <string name="str_wavedistortion">波形失真度</string>
    <string name="str_totalactivepower">总有功功率(kW)</string>
    <string name="str_totalreactivepower">总无功功率(kvar)</string>
    <string name="str_totalpowerfactor">总功率因数</string>
    <string name="str_powernetfreq">电网频率(Hz)</string>
    <string name="str_phase_A">A</string>
    <string name="str_phase_B">B</string>
    <string name="str_phase_C">C</string>
    
    <string name="str_electricenergy">电能</string>
    <string name="str_readoption">抄读选项</string>
    <string name="str_readdevice">抄读设备</string>
    <string name="str_power">电&#160;&#160;&#160;&#160;&#160;&#160;量</string>
    <string name="str_meteraddr">表&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="str_readtime">抄读时刻：</string>
    <string name="str_readtimeterm">抄读时段：</string>
    <string name="str_positiveactive">正向有功：</string>
    <string name="str_reverseactive">反向有功：</string>
    <string name="str_kaohebiao">考核表</string>
    <string name="str_fenxiyi">分析仪</string>
    <string name="str_dianbiao">电表</string>
    <string name="str_read">抄读</string>
    <string name="str_calc">计算</string>
    <string name="str_query">查询</string>
    <string name="str_back">返回</string>
    <string name="str_commuexport">通讯导出</string>

    <string name="str_lineloss">线&#160;&#160;损</string>
    <string name="str_timeterm">时&#160;&#160;段</string>
    <string name="str_position">位&#160;&#160;置</string>
    <string name="str_linelossvalue">线&#160;损&#160;值</string>
    <string name="str_new">新建</string>
    <string name="str_export">导出</string>
    
    <string name="str_meterboxnum">表&#160;&#160;箱&#160;&#160;号</string>
    <string name="str_branchlevel">分支级别</string>
    <string name="str_branchrecogresult">分支识别结果</string>
    
    <string name="str_yes">确定</string>
    <string name="str_analyzerinfo">分析仪信息</string>
    <string name="str_taibianaddr">台变地址</string>
    <string name="str_branchbox">分支箱号</string>
    <string name="str_analyzeraddr">分析仪地址</string>
    <string name="str_communication">通讯</string>
    
    <string name="str_start">开始</string>
    <string name="str_readdayfreeze">日冻结数据抄读</string>
    <string name="str_readhourfreeze">小时冻结数据抄读</string>
    <string name="str_broadcastchecktime">广播校时</string>
    <string name="str_clearmeter">电表清零</string>
    <string name="str_get_time">获取时间</string>
    <string name="str_set_time">设置时间</string>
    <string name="str_get_date">获取日期</string>
    <string name="str_set_date">设置日期</string>
    
    <string name="str_channel_bluetooth">蓝牙通道</string>
    <string name="str_channel_serialport">串口通道</string>
    
    
     <string name="common_imei_code">序列号：</string>
    <string name="common_register_code">注册码：</string>
    <string name="common_register_input">请输入注册码</string>
    <string name="common_register">注册</string>
    <string name="common_register_cancel">退出</string>
    <!-- mainnodemodule -->
    <string name="set">设&#160;&#160;&#160;&#160;置</string>
    <string name="read">读&#160;&#160;&#160;&#160;取</string>
    <string name="unknown">默认值</string>
    <string name="start_report">上&#160;&#160;&#160;&#160;报</string>
    <string name="stop_report">停止上报</string>
    <string name="start_sleep">休眠</string>
    <string name="check_time">校&#160;&#160;&#160;&#160;时</string>
    <string name="get_time">读取时间</string>
    
    <string name="str_signalEnergy">信号能量：0</string>
    <string name="str_backNoise">背景噪声：0</string>
    <string name="str_startUp">打开马达</string>
    <string name="str_shutdown">关闭马达</string>
    <string name="str_cleardata">数据总清</string>
    <string name="str_readevent">事件抄读</string>
    <string name="str_pointread">点抄事件</string>
    
</resources>