<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/line_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        	<RadioButton android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:textColor="@android:color/black"
        	    android:layout_gravity="center"
        	    android:layout_weight="0.5"
        	    android:id="@+id/rbtn_blue_settings"
        	    android:text="@string/str_channel_bluetooth"/>
        	<RadioButton android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:layout_weight="0.5"
        	    android:id="@+id/rbtn_serial_settings"
        	    android:textColor="@android:color/black"
        	    android:text="@string/str_channel_serialport"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        	<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="地&#160;址："
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_addr_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789:abcdef"
                    android:layout_marginRight="10dp" />
        </LinearLayout>
        
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
        	<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="时&#160;间："
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:digits="0123456789:"
                    android:hint="hh:mm:ss"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_set_time"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/button_selector"
                    android:text="@string/str_set_time" />

                <Button
                    android:id="@+id/btn_get_time"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_selector"
                    android:text="@string/str_get_time" />
            </RelativeLayout>
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
        	<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="电表清零："
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_clearmeter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:visibility="gone"
                    android:ems="5"
                    android:digits="0123456789"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_clearmeter"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_centerInParent="true"
                    android:text="@string/str_clearmeter" />

            </RelativeLayout>
        </LinearLayout>
		
         <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_broadcastchecktime"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_centerInParent="true"
                    android:text="@string/str_broadcastchecktime" />

            </RelativeLayout>
        </LinearLayout>
        
         <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readdayfreeze"
                    style="@style/dword_btn_style"
                    android:layout_width="140dp"
                    android:singleLine="true"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readdayfreeze" />

            </RelativeLayout>
        </LinearLayout>
        
         <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readhourfreeze"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_width="140dp"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readhourfreeze" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readhourfreeze"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_width="140dp"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readhourfreeze" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readhourfreeze"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_width="140dp"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readhourfreeze" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readhourfreeze"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_width="140dp"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readhourfreeze" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readhourfreeze"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_width="140dp"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readhourfreeze" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderstyle"
            android:orientation="vertical" >
            
        	<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/btn_readhourfreeze"
                    style="@style/dword_btn_style"
                    android:singleLine="true"
                    android:layout_width="140dp"
                    android:layout_centerInParent="true"
                    android:text="@string/str_readhourfreeze" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>